Add custom domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "replatform",
-  "homepage": "https://chaoztech.github.io/replatform_landing_page",
+  "homepage": "https://replatform.dev",
   "private": true,
   "version": "0.0.0",
   "type": "module",
